version/stable/_sources/api/ansys/mechanical/stubs/v242/Ansys/ACT/Automation/Mechanical/FE/CommandColl.rst.txt
.. vale off



:class:`CommandColl`
====================

.. py:class:: ansys.mechanical.stubs.v242.Ansys.ACT.Automation.Mechanical.FE.CommandColl(iCommandColl: Ansys.Common.Interop.FECommandsModel.ICommandColl, commandRepository: Ansys.ACT.Automation.Mechanical.FE.CommandRepository)

   Bases: :py:obj:`object`


   
   Collection of commands.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: CommandColl

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~GetEnumerator`
            - GetEnumerator method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Count`
            - Gets the count of commands.
          * - :py:attr:`~Item`
            - Item property.







Property detail
---------------
.. py:property:: Count
   :type: Optional[int]


   
   Gets the count of commands.
















   ..
       !! processed by numpydoc !!

.. py:property:: Item
   :type: Optional[Ansys.Common.Interop.FECommandsModel.ICommand]


   
   Item property.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: GetEnumerator() -> Iterator[Ansys.Common.Interop.FECommandsModel.ICommand]

   
   GetEnumerator method.

   ..
       !! processed by numpydoc !!



.. vale on